--- a/src/index.html
+++ b/src/index.html
@@ -43,7 +43,7 @@ title: PEREZRE
           <div class="text-center">
               <h1 class="text-2xl font-semibold text-white uppercase lg:text-3xl">Stay <span class="text-blue-500 underline">Curious</span></h1>
               <a href="#projects">
-              <button class="w-full px-4 py-2 mt-4 text-sm font-medium text-white uppercase transition-colors duration-200 bg-blue-600 rounded-md lg:w-auto hover:bg-blue-500 focus:outline-none focus:bg-blue-500" >More</button></a>
+              <button class="w-full px-4 py-2 mt-4 text-sm font-medium text-white uppercase transition-colors duration-200 bg-blue-600 rounded-md lg:w-auto hover:bg-blue-500 focus:outline-none focus:bg-blue-500" >See More</button></a>
           </div>
       </div>
   </div>
@@ -71,7 +71,7 @@ title: PEREZRE
 
               <h1 class="mt-4 text-xl font-semibold text-gray-800 dark:text-white">Lifelong learning</h1>
               
-              <p class="mt-2 text-gray-500 dark:text-gray-400">Self-motivated to continuously learn new skills. Move outside the comofort zone to grow and share my knowledge. Challenge myself on new topics.</p>
+              <p class="mt-2 text-gray-500 dark:text-gray-400">Self-motivated to continuously learn new skills. Move outside the comfort zone to grow and share my knowledge. Challenge myself on new topics.</p>
           </div>
           
           <div>
@@ -98,7 +98,7 @@ title: PEREZRE
               <h2 class="text-3xl font-bold text-gray-800 dark:text-gray-100">Who I am</h2>
 
               <p class="mt-4 text-gray-500 dark:text-gray-400 lg:max-w-md">
-                  Hi, I am Rebeca, currently finishing my career on mechatronics engineering with a high affinity on IT. I strive to stay flexible with focus on cloud engineering and security. How technical things work has always been my motivation to dive deeper. I started rooting my phone, from there I continued with embedded systems and later with programming and devops tools. 
+                  Hi, I am Rebeca, currently finishing my career on mechatronics engineering. I have a high affinity on IT and strive to stay flexible with focus on cloud engineering and security. How technical things work has always been my motivation to dive deeper. It started with rooting my phone to use custom ROMs. From there I continued with embedded systems and later with programming and DevOps tools. 
               </p>
               <button class="inline-flex items-center px-4 py-2 mt-4 text-xs font-medium text-white uppercase transition-colors duration-200 bg-blue-600 rounded-md lg:w-auto hover:bg-blue-500 focus:outline-none focus:bg-blue-500">
                 <a href="mailto: contact@perezre.de">
@@ -878,9 +878,9 @@ title: PEREZRE
               <img class="object-cover object-center w-full max-h-48 mx-auto rounded-lg aspect-video" src="/img/nc.svg" alt="Nextcloud rating" width="1920" height="1080">
 
               <div class="mt-2">
-                  <h3 class="text-lg font-medium text-gray-700 dark:text-gray-200">Nextcloud - Setup and Konfiguration</h3>
+                  <h3 class="text-lg font-medium text-black dark:text-gray-200">Nextcloud </h3> <h4>Setup and Configuration</h4>
                   <ul role="list" class="marker:text-sky-400 list-disc pl-5 space-y-1 text-gray-400">
-                    <li>Network configuration - PiHole, VPN</li>
+                    <li>Network configuration - VPN</li>
                     <li>Security - Hardware hardening</li>
                     <li>Backup automation routine</li>
                   </ul>
@@ -891,7 +891,7 @@ title: PEREZRE
               <img class="object-cover object-center w-full max-h-48 mx-auto rounded-lg aspect-video" src="/img/11ty.svg" alt="11ty and TailwindCSS" width="1920" height="1080">
 
               <div class="mt-2">
-                  <h3 class="text-lg font-medium text-gray-700 dark:text-gray-200">Homepage - Upgrade and Redesign</h3>
+                  <h3 class="text-lg font-medium text-black dark:text-gray-200">Homepage</h3> <h4> Upgrade and Redesign</h4>
                   <ul role="list" class="marker:text-sky-400 list-disc pl-5 space-y-1 text-gray-400">
                     <li>From Hugo framework to 11ty</li>
                     <li>First touch with TailwindCSS</li>
@@ -904,7 +904,7 @@ title: PEREZRE
               <img class="object-cover object-center w-full max-h-48 mx-auto rounded-lg aspect-video" src="/img/cloudpaths.svg" alt="Cloud Paths" width="1920" height="1080">
 
               <div class="mt-2">
-                  <h3 class="text-lg font-medium text-gray-700 dark:text-gray-200">Cloud Computing - Learning Paths</h3>
+                  <h3 class="text-lg font-medium text-black dark:text-gray-200">Cloud Computing </h3> <h4> Learning Paths </h4> 
                   <ul role="list" class="marker:text-sky-400 list-disc pl-5 space-y-1 text-gray-400">
                     <li>Amazon Web Services</li>
                     <li>Azure Cloud</li>
@@ -917,7 +917,7 @@ title: PEREZRE
               <img class="object-cover object-center w-full max-h-48 mx-auto rounded-lg aspect-video" src="/img/cybersecurity.svg" alt="Cybersecurity" width="1920" height="1080">
 
               <div class="mt-2">
-                  <h3 class="text-lg font-medium text-gray-700 dark:text-gray-200">Cybersecurity - Hands-on</h3>
+                  <h3 class="text-lg font-medium text-black dark:text-gray-200">Cybersecurity </h3> <h4> Hands-on</h4>
                   <ul role="list" class="marker:text-sky-400 list-disc pl-5 space-y-1 text-gray-400">
                     <li>Bug Bounty Hunter</li>
                     <li>Penetration Tester</li>
@@ -936,7 +936,7 @@ title: PEREZRE
     <h1 class="text-3xl font-semibold text-center text-gray-800 capitalize lg:text-4xl dark:text-white">Study <span class="text-blue-500">Projects</span></h1>
 
     <p class="max-w-2xl mx-auto my-6 text-center text-gray-500 dark:text-gray-300">
-      Projects in mechatronics engineering at the university. <br> Study language is german, therefore description is adapted.
+      Projects in mechatronics engineering at the university in Stuttgart <br> The description is in german
     <p class="text-xs py-2 text-gray-800 dark:text-white sm:py-0 text-center">Notenbewertung: 1 = Sehr Gut | 2 = Gut | 3 = Befriedigend</p>
 
 
@@ -958,7 +958,7 @@ title: PEREZRE
 
               <div class="mt-2">
                   <h3 class="text-lg font-bold text-gray-700 dark:text-gray-200">Pressenvermessungtool <a class="text-gray-500">(2.0)</a></h3>
-                <p class="text-gray-500">Die Entwicklung von einem Softwarevergleichstool für die Pressenvermessung zur Analyse von Genauigkeitskennwerten.</p>
+                <p class="text-gray-500">Das Ziel der Arbeit ist die Entwicklung von einem Softwarevergleichstool für die Pressenvermessung zur Analyse von Genauigkeitskennwerten.</p>
               </div>
           </div>
 
@@ -976,7 +976,7 @@ title: PEREZRE
 
               <div class="mt-2">
                   <h3 class="text-lg font-bold text-gray-700 dark:text-gray-200">Bildbearbeitung und -korrektur <a class="text-gray-500">(1.0)</a></h3>
-                <p class="text-gray-500">Das Ziel der Arbeit ist es gegebene Bilder mithilfe von Matlab zu manipulieren bzw. korriegeren. Mit Fokus auf Verarbeitung, Auswertung und Kompression.</p>
+                <p class="text-gray-500">Das Ziel der Arbeit ist es gegebene Bilder mithilfe von Matlab zu manipulieren bzw. korrigieren. Mit Fokus auf Verarbeitung, Auswertung und Kompression.</p>
               </div>
           </div>
 
@@ -985,7 +985,7 @@ title: PEREZRE
 
               <div class="mt-2">
                 <h3 class="text-lg font-bold text-gray-700 dark:text-gray-200">Bauweise von Robotern<a class="text-gray-500">(1.3)</a></h3>
-                <p class="text-gray-500">Das Ziel der Arbeit ist es den Vergleich der Bauweise von Industrieroboter auf deren Eigenschaften unter gegebenen Aspekten zu untersuchen.</p>            
+                <p class="text-gray-500">Das Ziel der Arbeit ist es den Unterschied der Bauweise von zwei  Industrieroboter auf deren Eigenschaften unter gegebenen Aspekten zu untersuchen.</p>            
               </div>
           </div>
 
@@ -994,7 +994,7 @@ title: PEREZRE
 
               <div class="mt-2">
                   <h3 class="text-lg font-bold text-gray-700 dark:text-gray-200">NC-Programmierung <a class="text-gray-500">(1.7)</a></h3>
-                <p class="text-gray-500">Das Ziel der Arbeit ist im ersten Teil die NC-Programmierung anhand von Fräsaufgaben und dann die Roboterprogrammierung eines Industrieroboter in einer Roboterzelle.</p>
+                <p class="text-gray-500">Das Ziel der Arbeit ist die CNC-Programmierung von Fräsmaschinen und die Roboterprogrammierung eines Industrieroboter in einer Roboterzelle.</p>
               </div>
           </div>
 
@@ -1012,7 +1012,7 @@ title: PEREZRE
 
               <div class="mt-2">
                   <h3 class="text-lg font-bold text-gray-700 dark:text-gray-200">Softwareentwicklung <a class="text-gray-500">(1.7)</a></h3>
-                <p class="text-gray-500">Das Ziel der Arbeit ist es ein Petri-Netz-Simulator zu entwickeln und zu implementieren. Mit Fokus auf GUI, Simulator und Graphische Auswertung.</p>
+                <p class="text-gray-500">Das Ziel der Arbeit ist es ein Petri-Netz-Simulator zu entwickeln und zu implementieren. Mit Fokus auf GUI, Simulator und graphische Auswertung.</p>
               </div>
           </div>
 
@@ -1021,7 +1021,7 @@ title: PEREZRE
 
               <div class="mt-2">
                 <h3 class="text-lg font-bold text-gray-700 dark:text-gray-200">Wetterstation mit DHT11 Sensor <a class="text-gray-500">(1.7)</a></h3>
-                <p class="text-gray-500">Das Ziel der Arbeit ist es ein mit dem Raspberry eine IoT Wetterstation und dem DHT11 Sensor umzusetzen. Mit Echtzeitabruf auf beliebigen Endgeräten. </p>            
+                <p class="text-gray-500">Das Ziel der Arbeit ist es mit dem Raspberry und einem DHT11 Sensor eine IoT Wetterstation zu entwickeln und in Echtzeit auf beliebigen Geräten abzurufen. </p>            
               </div>
           </div>
 
@@ -1030,7 +1030,7 @@ title: PEREZRE
 
               <div class="mt-2">
                   <h3 class="text-lg font-bold text-gray-700 dark:text-gray-200">Piezo-Sensoren <a class="text-gray-500">(2.3)</a></h3>
-                <p class="text-gray-500">Das Ziel der Arbeit es es die Anwendung von Piezo-Sensoren in der Prozessmesstechnik zu untersuchen und Unterschiede feststellen.</p>
+                <p class="text-gray-500">Das Ziel der Arbeit es es die Anwendung von Piezo-Sensoren in der Prozessmesstechnik zu untersuchen und Unterschiede festzustellen.</p>
               </div>
           </div>
 
@@ -1039,7 +1039,7 @@ title: PEREZRE
 
               <div class="mt-2">
                 <h3 class="text-lg font-bold text-gray-700 dark:text-gray-200">Steuerung von Bohreinrichtung <a class="text-gray-500">(1.3)</a></h3>
-                <p class="text-gray-500">Das Ziel der Arbeit ist das Spannen und Bohren von Werkstücken mit einer SPS Steuerung zu entwickeln und in CoDeSys zu Simulieren.</p>            
+                <p class="text-gray-500">Das Ziel der Arbeit ist die Steuerung für das Spannen und Bohren von Werkstücken mit SPS zu entwickeln und in CoDeSys zu simulieren.</p>            
               </div>
           </div>
 
@@ -1048,7 +1048,7 @@ title: PEREZRE
 
               <div class="mt-2"> 
                   <h3 class="text-lg font-bold text-gray-700 dark:text-gray-200">Regelungstechnik <a class="text-gray-500">(1.0)</a></h3>
-                <p class="text-gray-500">Das Ziel der Arbeit ist es eine Einführung in Simulink anahang vorgegebener Aufgaben zu erarbeiten. Unter anderem die Paremtrierung und Simulation eines MFDS. </p>
+                <p class="text-gray-500">Das Ziel der Arbeit ist es eine Einführung in Simulink, anhand vorgegebener Aufgaben zu erarbeiten. Z.B. die Parametrierung und Simulation eines MFDS. </p>
               </div>
           </div>
 
@@ -1066,7 +1066,7 @@ title: PEREZRE
 
               <div class="mt-2">
                   <h3 class="text-lg font-bold text-gray-700 dark:text-gray-200">Produktentwicklungsprozess <a class="text-gray-500">(1.0)</a></h3>
-                <p class="text-gray-500">Das Ziel der Arbeit ist ein Technischer Bericht zur Creme Herstellung und Konstruktion einer Abfülleinrichtung nach VDI 2221 zu erarbeiten.</p>
+                <p class="text-gray-500">Das Ziel der Arbeit ist ein technischer Bericht zur Herstellung von Kosmetikprodukten und die Konstruktion einer Abfülleinrichtung nach VDI 2221.</p>
               </div>
           </div>
 
