cleaned up some errors on icons and fonts

--- a/src/index.html
+++ b/src/index.html
@@ -871,12 +871,12 @@ title: PEREZRE
     </p>
 
   <div class="flex items-center justify-center">
-      <div class="grid gap-8 mt-8 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4">
+      <div class="grid gap-x-10 gap-y-8 mt-8 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4">
           <div class="w-full max-w-xs text-left">
-              <img class="object-cover object-center w-full max-h-48 mx-auto rounded-lg aspect-video" src="/img/nc.svg" alt="Nextcloud rating" width="1920" height="1080">
+              <img class="object-cover object-center w-full h-44 mx-auto rounded-lg aspect-video" src="/img/nc.svg" alt="Nextcloud rating" width="1920" height="1080">
 
               <div class="mt-2">
-                  <h3 class="text-lg font-medium text-black dark:text-gray-200">Nextcloud </h3> <h4>Setup and Configuration</h4>
+                  <h3 class="text-lg font-medium text-black dark:text-gray-200">Nextcloud </h3> <h4 class="text-base font-normal text-black dark:text-gray-200"> Setup and Configuration</h4>
                   <ul role="list" class="marker:text-sky-400 list-disc pl-5 space-y-1 text-gray-400">
                     <li>Network configuration - VPN</li>
                     <li>Security - Hardware hardening</li>
@@ -886,10 +886,10 @@ title: PEREZRE
           </div>
 
           <div class="w-full max-w-xs text-left">
-              <img class="object-cover object-center w-full max-h-48 mx-auto rounded-lg aspect-video" src="/img/11ty.svg" alt="11ty and TailwindCSS" width="1920" height="1080">
+              <img class="object-cover object-center w-full h-44 mx-auto rounded-lg aspect-video" src="/img/11ty.svg" alt="11ty and TailwindCSS" width="1920" height="1080">
 
               <div class="mt-2">
-                  <h3 class="text-lg font-medium text-black dark:text-gray-200">Homepage</h3> <h4> Upgrade and Redesign</h4>
+                  <h3 class="text-lg font-medium text-black dark:text-gray-200">Homepage</h3> <h4 class="text-base font-normal text-black dark:text-gray-200"> Upgrade and Redesign</h4>
                   <ul role="list" class="marker:text-sky-400 list-disc pl-5 space-y-1 text-gray-400">
                     <li>From Hugo framework to 11ty</li>
                     <li>First touch with TailwindCSS</li>
@@ -899,10 +899,10 @@ title: PEREZRE
           </div>
 
           <div class="w-full max-w-xs text-left">
-              <img class="object-cover object-center w-full max-h-48 mx-auto rounded-lg aspect-video" src="/img/cloudpaths.svg" alt="Cloud Paths" width="1920" height="1080">
+              <img class="object-cover object-center w-full h-44 mx-auto rounded-lg aspect-video" src="/img/cloudpaths.svg" alt="Cloud Paths" width="1920" height="1080">
 
               <div class="mt-2">
-                  <h3 class="text-lg font-medium text-black dark:text-gray-200">Cloud Computing </h3> <h4> Learning Paths </h4> 
+                  <h3 class="text-lg font-medium text-black dark:text-gray-200">Cloud Computing </h3> <h4 class="text-base font-normal text-black dark:text-gray-200"> Learning Paths </h4> 
                   <ul role="list" class="marker:text-sky-400 list-disc pl-5 space-y-1 text-gray-400">
                     <li>Amazon Web Services</li>
                     <li>Azure Cloud</li>
@@ -912,10 +912,10 @@ title: PEREZRE
           </div>
 
           <div class="w-full max-w-xs text-left">
-              <img class="object-cover object-center w-full max-h-48 mx-auto rounded-lg aspect-video" src="/img/cybersecurity.svg" alt="Cybersecurity" width="1920" height="1080">
+              <img class="object-cover object-center w-full h-44 mx-auto rounded-lg aspect-video" src="/img/cybersecurity.svg" alt="Cybersecurity" width="1920" height="1080">
 
               <div class="mt-2">
-                  <h3 class="text-lg font-medium text-black dark:text-gray-200">Cybersecurity </h3> <h4> Hands-on</h4>
+                  <h3 class="text-lg font-medium text-black dark:text-gray-200">Cybersecurity </h3> <h4 class="text-base font-normal text-black dark:text-gray-200"> Hands-on</h4>
                   <ul role="list" class="marker:text-sky-400 list-disc pl-5 space-y-1 text-gray-400">
                     <li>Bug Bounty Hunter</li>
                     <li>Penetration Tester</li>
