--- a/src/index.html
+++ b/src/index.html
@@ -130,7 +130,7 @@ title: PEREZRE
       <p class="max-w-2xl mx-auto my-6 text-center text-gray-500 dark:text-gray-300">
         An alphabetic overview of some tools I use(ed) to work with
       </p>
-      <link rel="stylesheet" href="httpss://cdn.jsdelivr.net/gh/devicons/devicon@v2.14.0/devicon.min.css"> 
+      <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.14.0/devicon.min.css"> 
 
       <div class="grid grid-cols-2 gap-8 md:grid-cols-12 lg:grid-cols-5">
 
@@ -1126,6 +1126,6 @@ title: PEREZRE
   
   </div>
   <div class="flex-auto justify-center items-center text-xs py-2 text-gray-800 text-center dark:text-white sm:py-0">
-    Copyright &copy; 2013-2022 - <a href="https:www.perezre.de" target="_blank" rel="nofollow noopener"> PEREZRE </a> - All Rights Reserved <br> Made with <svg class="inline-block w-4 h-4" fill="#e25555" viewBox="0 0 24 24">
+    Copyright &copy; 2013-2022 - <a href="https:www.perezre.de"> PEREZRE </a> - All Rights Reserved <br> Made with <svg class="inline-block w-4 h-4" fill="#e25555" viewBox="0 0 24 24">
     <path d="M3.172 5.172a4 4 0 015.656 0L10 6.343l1.172-1.171a4 4 0 115.656 5.656L10 17.657l-6.828-6.829a4 4 0 010-5.656z"/></svg>in Switzerland</div>
 </footer>
